--- a/web/temp.html
+++ b/web/temp.html
@@ -26,7 +26,7 @@
     }
 
     .dropdown-content {
-      display: none;
+      display:none;
       position: absolute;
       min-width: 60px;
       background-color: rgba(0, 0, 0, 0.0);
@@ -42,8 +42,7 @@
       border: none;
 background: none;
       padding: 12px 16px;
-      text-decoration: none;
-      display: block;
+     
     }
     .dropdown-content button:hover {
       color: rgb(226, 72, 6, 1);
@@ -64,13 +63,13 @@ background: none;
                     <li><a href="#blog_section" class="nav_link">Blogs</a></li>
                     <li><a href="#contact_section" class="nav_link">Contact Us</a></li>
                    <li>
-                    <div class="dropdown">
-                      <button class="open-button" style="background-color: transparent;  border: none">Login</button>
-                      <div class="dropdown-content">
-                          <button class="open-button" onclick="openForm()" class="nav_link">Customer</button>
-                          <button class="open-button" onclick="openForm()" class="nav_link">Login</button></li>
-                     </div>
-                    </div>
+                    <div class="dropdown" >
+                      <button class="open-button" style="background-color: transparent;  border: none; ">Login</button>
+                      <div class="dropdown-content" >
+                          <button class="open-button" onclick="openForm()" class="nav_link"  >Customer</button>
+                          <button class="open-button" onclick="openForm()" class="nav_link" >Login</button></li>
+                     </div> 
+                    </div> 
                 </li>
                 </ul>
                 <div id="toggleIcon">
@@ -224,7 +223,7 @@ background: none;
 
         <div class="about_section" id="about_section">
             <div class="image_section" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-                <img src="/image/all.avif" alt="About Image" class="about_img">
+                <img src="/web/image/all.avif" alt="About Image" class="about_img">
             </div>
             <div class="content_section" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                 <div class="tag_section">
@@ -258,12 +257,12 @@ background: none;
             <div class="wrapper">
                 <input id="btnBox" type="checkbox">
                 <ul>
-                    <li><a href="/city.html"><img src="/image/wash.avif" alt="Category Image" class="cat_img"></a></li>
-                    <li><a href="/city.html"><img src="/image/monitor-concept-illustration_114360-3413.avif" alt="Category Image" class="cat_img"></a></li>
-                    <li><a href="/city.html"><img src="/image/fridge.avif" alt="Category Image" class="cat_img"></a></li>
-                    <li><a href="/city.html"><img src="/image/ac.avif" alt="Category Image" class="cat_img"></a></li>
-                    <li><a href="/city2.html"><img src="/image/lap.avif" alt="Category Image" class="cat_img"></a></li>
-                    <li><a href="/city.html"><img src="/image/wash.avif" alt="Category Image" class="cat_img"></a></li>
+                    <li><a href="/city.html"><img src="/web/image/wash.avif" alt="Category Image" class="cat_img"></a></li>
+                    <li><a href="/city.html"><img src="/web/image/monitor-concept-illustration_114360-3413.avif" alt="Category Image" class="cat_img"></a></li>
+                    <li><a href="/city.html"><img src="/web/image/fridge.avif" alt="Category Image" class="cat_img"></a></li>
+                    <li><a href="/city.html"><img src="/web/image/ac.avif" alt="Category Image" class="cat_img"></a></li>
+                    <li><a href="/city2.html"><img src="/web/image/lap.avif" alt="Category Image" class="cat_img"></a></li>
+                    <li><a href="/city.html"><img src="/web/image/wash.avif" alt="Category Image" class="cat_img"></a></li>
                 </ul>
                 <label class="btn-area" for="btnBox"><span class="btn1">SHOW MORE</span> <span class="btn2">SHOW LESS</span></label>
             </div>
